# mcps

./: .gitignore  mcp.json  pyproject.toml
weather/: .gitignore  README.md  env.template  main.py  pyproject.toml  server.py
weather/tools/: __init__.py  get_daily_weather.py
